[gd_scene load_steps=20 format=2]

[ext_resource path="res://0 - General/Sprites/Oficiales/ElmoBig.png" type="Texture" id=1]
[ext_resource path="res://0 - General/Themes/LatoTheme.tres" type="Theme" id=2]
[ext_resource path="res://0 - General/Scripts/CreditsText.gd" type="Script" id=3]
[ext_resource path="res://0 - General/Sprites/Godot.png" type="Texture" id=4]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/UmaruEnLlamas.png" type="Texture" id=5]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/UmaruUmaru.png" type="Texture" id=6]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/PepisCute.png" type="Texture" id=7]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/Normachan.png" type="Texture" id=8]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/PepeyKuro.png" type="Texture" id=9]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/Pepis.png" type="Texture" id=10]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/PepisYAY.png" type="Texture" id=11]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/PepisEnfadado.png" type="Texture" id=12]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/PepisLove.png" type="Texture" id=13]
[ext_resource path="res://0 - General/Sprites/Oficiales/Pepis/PepisEmocionado.png" type="Texture" id=14]
[ext_resource path="res://0 - General/Sprites/freepik.png" type="Texture" id=15]
[ext_resource path="res://0 - General/Sprites/YouTube.png" type="Texture" id=16]
[ext_resource path="res://0 - General/Themes/Fonts/Titulos.tres" type="DynamicFont" id=17]
[ext_resource path="res://0 - General/Themes/Fonts/h2.tres" type="DynamicFont" id=18]
[ext_resource path="res://0 - General/Sprites/Oficiales/umaruyt.jpg" type="Texture" id=19]

[node name="CreditText" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 360.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 543, 481 )
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Creditos" type="Label" parent="."]
margin_right = 717.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 17 )
text = "CRÉDITOS"
align = 1

[node name="Umaru" type="Node2D" parent="."]
position = Vector2( 0, 200 )

[node name="Creador" type="Label" parent="Umaru"]
margin_right = 720.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -1011.75, -471 )
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Juego NO Oficial"
align = 1
valign = 1

[node name="Creador2" type="Label" parent="Umaru"]
margin_top = 50.0
margin_right = 720.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( -1011.75, -471 )
text = "Basado en el universo de"
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="Umaru"]
margin_left = 310.0
margin_top = 150.0
margin_right = 410.0
margin_bottom = 250.0
texture = ExtResource( 19 )
expand = true

[node name="UmaruYT" type="LinkButton" parent="Umaru"]
margin_left = 281.019
margin_top = 257.0
margin_right = 443.019
margin_bottom = 304.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.529412, 0.533333, 1, 1 )
text = "@UmaruYT"
underline = 2

[node name="Dizo" type="Node2D" parent="."]
position = Vector2( 0, 700 )

[node name="Creador" type="Label" parent="Dizo"]
margin_right = 720.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -1011.75, -471 )
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Juego, Diseño y Código"
align = 1
valign = 1

[node name="Dizo" type="LinkButton" parent="Dizo"]
margin_left = 314.019
margin_top = 70.0
margin_right = 407.019
margin_bottom = 117.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.529412, 0.533333, 1, 1 )
text = "@Dizo"
underline = 2

[node name="Gráficos" type="Node2D" parent="."]
position = Vector2( 0, 1000 )

[node name="UmaruVerse" type="Label" parent="Gráficos"]
margin_top = -1.0
margin_right = 720.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Gráficos"
align = 1
valign = 1

[node name="Selenabitt" type="Node2D" parent="Gráficos"]
position = Vector2( 0, 100 )

[node name="TextureRect" type="TextureRect" parent="Gráficos/Selenabitt"]
margin_left = 160.0
margin_right = 260.0
margin_bottom = 100.0
texture = ExtResource( 8 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Gráficos/Selenabitt"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 100.0
texture = ExtResource( 9 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Gráficos/Selenabitt"]
margin_left = 360.0
margin_right = 460.0
margin_bottom = 100.0
texture = ExtResource( 5 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Gráficos/Selenabitt"]
margin_left = 460.0
margin_right = 560.0
margin_bottom = 100.0
texture = ExtResource( 6 )
expand = true

[node name="Selenabitt" type="LinkButton" parent="Gráficos/Selenabitt"]
margin_left = 273.234
margin_top = 104.0
margin_right = 446.234
margin_bottom = 151.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.529412, 0.533333, 1, 1 )
text = "@Selenabitt"
underline = 2

[node name="Komorebi" type="Node2D" parent="Gráficos"]
position = Vector2( 0, 350 )

[node name="TextureRect" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 115.0
margin_right = 190.0
margin_bottom = 75.0
texture = ExtResource( 10 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 200.0
margin_right = 275.0
margin_bottom = 75.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 280.0
margin_right = 355.0
margin_bottom = 75.0
texture = ExtResource( 14 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 365.0
margin_right = 440.0
margin_bottom = 75.0
texture = ExtResource( 12 )
expand = true

[node name="TextureRect5" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 445.0
margin_right = 520.0
margin_bottom = 75.0
texture = ExtResource( 13 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="Gráficos/Komorebi"]
margin_left = 525.0
margin_right = 600.0
margin_bottom = 75.0
texture = ExtResource( 11 )
expand = true

[node name="Komorebi" type="LinkButton" parent="Gráficos/Komorebi"]
margin_left = 274.234
margin_top = 90.0
margin_right = 447.234
margin_bottom = 137.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.529412, 0.533333, 1, 1 )
text = "@Komorebi"
underline = 2

[node name="BetaTester" type="Node2D" parent="."]
position = Vector2( 0, 1700 )
__meta__ = {
"_edit_group_": true
}

[node name="UmaruVerse" type="Label" parent="BetaTester"]
margin_top = -1.0
margin_right = 720.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "BetaTesters"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="BetaTester"]
anchor_right = 1.0
margin_left = 235.0
margin_top = 60.0
margin_right = 486.0
margin_bottom = 107.0
custom_constants/vseparation = 100
custom_constants/hseparation = 100
columns = 2

[node name="UmaruVerse" type="Label" parent="BetaTester/GridContainer"]
margin_right = 75.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.721569, 0.247059, 0.247059, 1 )
text = "Lokis"
align = 1
valign = 1

[node name="UmaruVerse2" type="Label" parent="BetaTester/GridContainer"]
margin_left = 175.0
margin_right = 251.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.721569, 0.247059, 0.247059, 1 )
text = "Clary"
align = 1
valign = 1

[node name="Gráficos Gratis" type="Node2D" parent="."]
position = Vector2( 0, 2100 )
__meta__ = {
"_edit_group_": true
}

[node name="UmaruVerse" type="Label" parent="Gráficos Gratis"]
margin_top = -1.0
margin_right = 720.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Otros recursos"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Gráficos Gratis"]
margin_left = 84.0
margin_top = 80.0
margin_right = 340.0
margin_bottom = 335.0
texture = ExtResource( 15 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Gráficos Gratis"]
margin_left = 463.368
margin_top = 87.0
margin_right = 613.368
margin_bottom = 187.0
texture = ExtResource( 16 )
expand = true

[node name="UmaruVerse2" type="Label" parent="Gráficos Gratis"]
margin_left = 397.0
margin_top = 192.0
margin_right = 679.0
margin_bottom = 239.0
text = "Biblioteca de audio"
align = 1
valign = 1

[node name="Engine" type="Node2D" parent="."]
position = Vector2( 0, 2500 )
__meta__ = {
"_edit_group_": true
}

[node name="UmaruVerse" type="Label" parent="Engine"]
margin_top = -1.0
margin_right = 720.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.984314, 0.247059, 1, 1 )
custom_fonts/font = ExtResource( 18 )
text = "Hecho con:"
align = 1
valign = 1

[node name="ElmoLlamas" type="TextureRect" parent="Engine"]
margin_left = 210.0
margin_top = 80.0
margin_right = 510.0
margin_bottom = 180.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Final" type="Node2D" parent="."]
position = Vector2( 0, 3000 )
__meta__ = {
"_edit_group_": true
}

[node name="Game" type="Node2D" parent="Final"]
position = Vector2( 0, 200 )

[node name="UmaruVerse" type="Label" parent="Final/Game"]
margin_right = 720.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 17 )
text = "UmaruVerse"
align = 1
valign = 1

[node name="ElmoLlamas" type="TextureRect" parent="Final/Game"]
margin_left = 240.0
margin_top = 99.0
margin_right = 490.0
margin_bottom = 349.0
texture = ExtResource( 1 )
expand = true

[node name="Despedida" type="Node2D" parent="Final"]
position = Vector2( 0, 600 )
__meta__ = {
"_edit_group_": true
}

[node name="UmaruVerse" type="Label" parent="Final/Despedida"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 367.0
text = "Si os ha gustado este videojuego no olviden darle un likesito, subscribirte si aún no lo has hecho y nos vemos muy pronto en un nuevo proyecto.

Miiiiiii....
"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Umaru/UmaruYT" to="." method="_on_UmaruYT_pressed"]
[connection signal="pressed" from="Dizo/Dizo" to="." method="_on_Dizo_pressed"]
[connection signal="pressed" from="Gráficos/Selenabitt/Selenabitt" to="." method="_on_Selenabitt_pressed"]
[connection signal="pressed" from="Gráficos/Komorebi/Komorebi" to="." method="_on_Komorebi_pressed"]
